fix whitespace on right of index page

--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,9 @@
 
 @import url("https://fonts.googleapis.com/css?family=Grenze+Gotisch&display=swap");
 
-html {
-	height: 100%;
-}
-
+html,
 body {
 	height: 100%;
-	width: 100%;
 }
 
 /* Applying background colour for header/nav  */
